--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
     <script src="https://cdn.auth0.com/js/lock/10.9.0/lock.min.js"></script>
     <script>
         window.addEventListener('load', function() {
+            document.cookie = 'auth0JWT=; expires=Thu, 01 Jan 1970 00:00:01 GMT;'
             var lock = new Auth0Lock(
                 'xroEKXENDcAeP2HaMq970Ff0zlYoiv7c',
                 'maximumsheep.eu.auth0.com', {
