--- a/login.html
+++ b/login.html
@@ -21,5 +21,5 @@
         });
       </script>
 </head>
-<body>Login<br/><a href="/pledges">Pledges</a></body>
+<body>Login<br/><a href="/pledges">Fake endpoint</a><br/><a href="https://beta.observablehq.com/@chhib/maximum-sheep-dashboard">https://beta.observablehq.com/@chhib/maximum-sheep-dashboard</a></a></body>
 </html>
